--- a/config/config.json
+++ b/config/config.json
@@ -2,9 +2,13 @@
   "development": {
     "username": "root",
     "password": "root",
-    "database": "joinfoDB",
-    "host": "127.0.0.1",
-    "dialect": "mysql"
+    "database": "JoinfoDB",
+    "host": "localhost",
+    "dialect": "mysql",
+    "define": {
+      "timestamp": true,
+      "freezeTableName": true
+    }
   },
   "test": {
     "username": "root",
